modify lightbox disableScrolling: true

--- a/space.html
+++ b/space.html
@@ -290,6 +290,10 @@
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
+
+    lightbox.option({
+      'disableScrolling': true
+    })
   </script>
 </body>
 
